@@ -1,3 +1,7 @@
+New in svn version:
+
+   * code "molecularpdos.x" computing PDOS on selected molecular orbitals
+     separately computed (courtesy of Guido Fratesi)
 
 Incompatible changes in svn version:
 
